# highpark-coworking

./: .gitignore  .travis.yml  Dockerfile  LICENSE.md  Pipfile  README.md  docker-compose.yml  fastapirun.sh  main.go  main.py  pyproject.toml  requirements.txt  setting.py
.github/workflows/: codeql-analysis.yml
authentication/: models.py  utils.py  views.py
database/: orm.py
go/: Dockerfile  go.mod  go.sum  main.go  routes.go  utils.go
go/static/css/: style.css
go/static/html/: 404.html  contacts.html  index.html  login.html  profile.html  profile_detail.html  register.html  rules.html  time.html
go/static/javascript/: auth.js  cart.js  datepicker.js  index.js
mail/: __init__.py
mail/templates/: verify.html
nginx/: nginx.conf
orm/: __init__.py  config.py  models.py
places/: models.py  utils.py  views.py
static/css/: style.css
static/html/: base.html  index.html  login.html
static/javascript/: datepicker.js
tests/: test_auth.py
