[tool.poetry]
name = "highpark-coworking"
version = "0.1.0"
description = ""
authors = ["azureswastika <azureswastika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
peewee = "^3.14.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
python-dotenv = "^0.17.1"
fastapi-mail = "^0.3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
pytest = "^6.2.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
