[tool.poetry]
name = "highpark-coworking"
version = "0.1.0"
description = ""
authors = ["azureswastika <azureswastika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.2"}

[tool.poetry.dev-dependencies]
peewee = "^3.14.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
fastapi-mail = "^0.3.7"
flake8 = "^3.9.2"
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
